AUGREL/src/objects/Financial_Account__c.object
<CustomObject>
    <fields>
        <fullName>Finance_Account_Product_Type__c</fullName>
        <label>Finance Account Product Type</label>
        <picklist>
            <picklistValues>
                <fullName>Picklist_Data_Goes_Here</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lease</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Retail</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Finance_Account_Status__c</fullName>
        <label>Finance Account Status</label>
        <picklist>
            <picklistValues>
                <fullName>Picklist_Data_Goes_Here</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Open</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Close</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lease Reversed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Finance_Account_Type__c</fullName>
        <label>Finance Account Type</label>
        <picklist>
            <picklistValues>
                <fullName>Business Customer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Consumer Customer</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Financial_Account_Number_Digits__c</fullName>
        <description>This formula field is used to query records based on all digit account number that is keyed in from phone keypad. 

E.g: abc123 will become 222123

This formula field will be indexed and should not be used without a proper index due to performance concerns.</description>
        <formula>IF(ISNUMBER( Financial_Account_Number__c ), Financial_Account_Number__c,

SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(

LOWER(Financial_Account_Number__c),

&quot;a&quot;,&quot;2&quot;),&quot;b&quot;,&quot;2&quot;),&quot;c&quot;,&quot;2&quot;),&quot;d&quot;,&quot;3&quot;),&quot;e&quot;,&quot;3&quot;),&quot;f&quot;,&quot;3&quot;),&quot;g&quot;,&quot;4&quot;),&quot;h&quot;,&quot;4&quot;),&quot;i&quot;,&quot;4&quot;),&quot;j&quot;,&quot;5&quot;),&quot;k&quot;,&quot;5&quot;),&quot;l&quot;,&quot;5&quot;),&quot;m&quot;,&quot;6&quot;),&quot;n&quot;,&quot;6&quot;),&quot;o&quot;,&quot;6&quot;),&quot;p&quot;,&quot;7&quot;),&quot;q&quot;,&quot;7&quot;),&quot;r&quot;,&quot;7&quot;),&quot;s&quot;,&quot;7&quot;),&quot;t&quot;,&quot;8&quot;),&quot;u&quot;,&quot;8&quot;),&quot;v&quot;,&quot;8&quot;),&quot;w&quot;,&quot;9&quot;),&quot;x&quot;,&quot;9&quot;),&quot;y&quot;,&quot;9&quot;),&quot;z&quot;,&quot;9&quot;) )</formula>
        <inlineHelpText>E.g: abc123 will become 222123

This formula field will be indexed and should not be used without a proper index due to performance concern</inlineHelpText>
        <label>Financial Account Number Digits</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Financial_Account_Number__c</fullName>
        <description>external financeaccount number</description>
        <externalId>true</externalId>
        <label>Financial Account Number</label>
        <length>40</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Flag_ACH__c</fullName>
        <description>ACH indicator</description>
        <label>Flag ACH</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Flag_Account_Statement_Request__c</fullName>
        <description>Account statement request flag</description>
        <label>Flag Account Statement Request</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Flag_Auto_Clearing_House__c</fullName>
        <description>ACH indicator</description>
        <label>Flag Auto Clearing House</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Flag_Bill_Statement_Request__c</fullName>
        <description>Bill statement request flag</description>
        <label>Flag Bill Statement Request</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Flag_Do_Not_Call__c</fullName>
        <description>Federal Do Not Call Flag</description>
        <label>Flag Do Not Call</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Flag_Encore_Eligible__c</fullName>
        <description>&quot;Lease: If number of payments made is more than 8 then this flag is true otherwise false.</description>
        <label>Flag Encore Eligible</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Flag_Insurance__c</fullName>
        <description>Insurance indicator</description>
        <label>Flag Insurance</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Flag_Military_Status__c</fullName>
        <description>Military Flag</description>
        <label>Flag Military Status</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Flag_OFSC__c</fullName>
        <description>OFSC indicator</description>
        <label>Flag OFSC</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Flag_Office_Of_Foreign_Asset_Control__c</fullName>
        <label>Flag Office Of Foreign Asset Control</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NULL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PND</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Flag_SCRA_Status__c</fullName>
        <description>SCRA Flag</description>
        <label>Flag SCRA Status</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Flag_Special_Handling__c</fullName>
        <description>Special Handling Flag</description>
        <label>Flag Special Handling</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Flag_Thirty_Plus_Days_Delinquant__c</fullName>
        <description>30 days delinquency flag</description>
        <label>Flag Thirty Plus Days Delinquant</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Flag_Vehicle_Low_Mileage__c</fullName>
        <description>low mileage indicator</description>
        <label>Flag Vehicle Low Mileage</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Flag_Vehicle_Reposession__c</fullName>
        <description>Repossession indicator</description>
        <label>Flag Vehicle Reposession</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Flag_Voice_Quote__c</fullName>
        <description>Voice quote indicator which is always set</description>
        <label>Flag Voice Quote</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Good_Through_Date__c</fullName>
        <description>Good through date</description>
        <label>Good Through Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Goodwill_Awarded__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Goodwill Awarded Field to indicate if a Goodwill award has ever been awarded to the Financial Account</description>
        <inlineHelpText>Goodwill Awarded Field to indicate if a Goodwill award has ever been awarded to the Financial Account</inlineHelpText>
        <label>Goodwill Awarded</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>History_Counter_Days_Past_Due__c</fullName>
        <description>&quot;DPD</description>
        <label>Days Past Due</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>History_Counter_Extensions_Deferrals__c</fullName>
        <label>Extensions/Deferrals</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>History_Counter_Fifteen_Days_Past_Due__c</fullName>
        <label>History Counter Fifteen Days Past Due</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>History_Counter_Lease_Expired_Months__c</fullName>
        <label>History Counter Lease Expired Months</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>History_Counter_Ninety_Days_Past_Due__c</fullName>
        <label>History Counter Ninety Days Past Due</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>History_Counter_Non_Sufficient_Funds__c</fullName>
        <label>Reversed Payments</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>History_Counter_Num_Months_Run_Hold__c</fullName>
        <label>History Counter Num Months Run Hold</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>History_Counter_Payments_Made__c</fullName>
        <label>Payments Made</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>History_Counter_SixtyDaysPastDue__c</fullName>
        <label>History Counter SixtyDaysPastDue</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>History_Counter_Thirty_Days_PastDue__c</fullName>
        <label>History Counter Thirty Days PastDue</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>HomePhone_BillTo__c</fullName>
        <description>Home Phone Number</description>
        <label>HomePhone BillTo</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>INT_PAY__c</fullName>
        <description>SRC: Host - IR (Information Repository)
INT: Data Feed from IR
Trans: &lt;Y/N&gt;
BU: RL
FD: Interest that has accrued since the last assessed payment and would be added to loan balance for payoff purposes</description>
        <label>Interest Due</label>
        <precision>18</precision>
        <scale>8</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Insurance_Description__c</fullName>
        <description>To be provided by TFS</description>
        <label>Insurance Description</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Activity_Date_NSF__c</fullName>
        <description>SRC: AB6 Requirements
INT: Integrated with ETL process
Trans: NA
BU: Collections
FD: Date indicating when Financial Account was last worked in NSF: non salesforce systems. This date will be updated whenever a task gets loaded by ETL into sales force. It will used along with Last Activity Date to update the last Activity indicator which is being used in Collection FA list view.</description>
        <label>Last Activity Date NSF</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Last_Activity_Date__c</fullName>
        <description>SRC: AB6 Requirements
INT: NA
Trans: NA
BU: Collections
FD: Date indicating when Financial Account was last worked on based on Related Task records. This date will be updated whenever a task gets created in sales force. It will used along with Last Activity Date NSF to update the last Activity indicator which is being used in Collection FA list view.</description>
        <label>Last Activity Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Last_Quote_Date_Payoff__c</fullName>
        <label>Last Quote Date Payoff</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Last_UI_Edit_Date__c</fullName>
        <description>Via workflow, capture the last time an edit was made to the FA record by an end user so integration can perform targeted outgoing updates</description>
        <label>Last UI Edit Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Late_Charge_Assessed__c</fullName>
        <description>Assessed late charge</description>
        <label>Late Charge Assessed</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Late_Charge_Paid__c</fullName>
        <description>Late Charges Paid</description>
        <label>Late Charge Paid</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Late_Charge_Waived__c</fullName>
        <description>Late Charges Waived</description>
        <label>Late Charge Waived</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Lease_Base_Rent__c</fullName>
        <description>Base rent</description>
        <label>Lease Base Rent</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Lease_Contract_Time_Amount__c</fullName>
        <description>Amount in time of contract</description>
        <label>Lease Contract Time Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Lease_Date__c</fullName>
        <description>Lease effective date</description>
        <label>Lease Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Lease_Income_Late_ChargeAmt_Lease_ToDate__c</fullName>
        <label>Lease Income Late ChargeAmt Lease ToDate</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Lease_Late_Charge_Waived_Amount_To_Date__c</fullName>
        <description>&quot;Lease_ late charge waived Lease_ to date</description>
        <label>Lease Late Charge Waived Amount To Date</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Lease_Payment_Total_Rent__c</fullName>
        <description>Lease_ payment total rent</description>
        <label>Lease Payment Total Rent</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Lease_Payoff_Amount_Gross__c</fullName>
        <description>Payoff amount</description>
        <label>Lease Payoff Amount Gross</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Lease_Payoff_Amount_Quote__c</fullName>
        <description>Payoff amount</description>
        <label>Lease Payoff Amount Quote</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Lease_Payoff_Amount__c</fullName>
        <description>Payoff amount</description>
        <label>Lease Payoff Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Lease_Residual_Amount__c</fullName>
        <description>Lease_ residual end-of-term amount</description>
        <label>Lease Residual Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Lease_Residual_End_of_Term_Amount__c</fullName>
        <description>Lease_ residual end-of-term amount</description>
        <label>Lease Residual End of Term Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Lease_State__c</fullName>
        <description>State of the customer address (tax related)</description>
        <label>Lease State</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lease_TermType__c</fullName>
        <description>Lease termination Type</description>
        <label>Lease TermType</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lease_Termination_Date__c</fullName>
        <description>Lease termination date</description>
        <label>Lease Termination Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Lease_Type__c</fullName>
        <description>Lease type</description>
        <label>Lease Type</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Loan_Amount_Original__c</fullName>
        <description>Original amount</description>
        <label>Original Loan Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Loan_Current_Amount__c</fullName>
        <description>Current amount</description>
        <label>Loan Balance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Loan_Date_Interest_To_Contract__c</fullName>
        <description>Interest contract to date</description>
        <label>Loan Date Interest To Contract</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Loan_Due_Date_Change__c</fullName>
        <description>Due date change</description>
        <label>Loan Due Date Change</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Loan_Interest_Paid__c</fullName>
        <description>Interest paid</description>
        <label>Loan Interest Paid</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Loan_Interest_Rebate__c</fullName>
        <description>Interest rebate</description>
        <label>Loan Interest Rebate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Loan_Maturity_Date__c</fullName>
        <description>Maturity date Loan maturity date</description>
        <label>Loan Maturity Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Loan_Original_Term__c</fullName>
        <description>Original term</description>
        <label>Original Term</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Loan_Over_Payment_Amount__c</fullName>
        <description>Over payment</description>
        <label>Loan Over Payment Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Loan_Rate_Annualized_Percentage__c</fullName>
        <formula>Loan_Rate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Loan Rate APR</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Loan_Rate__c</fullName>
        <label>Loan Rate</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Loan_Total_Interest_Paid__c</fullName>
        <description>Total interest paid</description>
        <label>Loan Total Interest Paid</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Loan_TypeCode__c</fullName>
        <description>&quot;Loan type code (simple</description>
        <label>Loan TypeCode</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Loan_Type__c</fullName>
        <description>Loan type</description>
        <label>Loan Type</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Make__c</fullName>
        <formula>Collateral__r.Make__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Make</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Maturity_Date__c</fullName>
        <description>Maturity date</description>
        <label>Maturity Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Maturity_Dates_Difference_in_Months__c</fullName>
        <description>Calculates the difference in complete months between the maturity date and revised maturity date</description>
        <formula>IF(DAY(Revised_Maturity_Date__c)&gt;=DAY(Maturity_Date__c),0,-1)+(YEAR(Revised_Maturity_Date__c)-YEAR(Maturity_Date__c))*12+MONTH(Revised_Maturity_Date__c)-MONTH(Maturity_Date__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Maturity Dates Difference in Months</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Message_Code1__c</fullName>
        <description>Message code</description>
        <label>Message Code1</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Message_Code2__c</fullName>
        <description>Message code</description>
        <label>Message Code2</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Message_Code3__c</fullName>
        <description>Message code</description>
        <label>Message Code3</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mileage_Charge__c</fullName>
        <label>Mileage Charge</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Model_Name__c</fullName>
        <formula>Collateral__r.Model_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Model Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Model_Year__c</fullName>
        <formula>Collateral__r.Model_Year__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Model Year</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Most_Recent_Cure_Note__c</fullName>
        <description>Populated by a process &amp; flow.

Contains the most recent cure note text.</description>
        <label>Most Recent Cure Note</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Numeric_Days_Past_Due__c</fullName>
        <description>SRC: Salesforce
INT: 
Trans: Y
BU: RL
FD: Formula field to convert the text field for days past due as provided by integration to a numeric value for use in workflows and available for other simple calculations and comparisons.</description>
        <formula>VALUE(History_Counter_Days_Past_Due__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Numeric Days Past Due</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Offers_Available__c</fullName>
        <description>  This formula field identifies number of offers available for a customer. </description>
        <formula>If(Refi_Pitch_Eligible_Flag__c = True,1,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Offers Available</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Partial_Payment_Option__c</fullName>
        <formula>IF(Coll_Num_Months_Past_Due__c &gt; 1, Payment_Amount_Past_Due__c - (Payment_Amount_Scheduled__c * (Coll_Num_Months_Past_Due__c - 1)), 0)</formula>
        <label>Partial Payment Option</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Past_Due_Charges__c</fullName>
        <formula>Payment_Amount_Past_Due__c + Charges_Late__c + Charges_Miscellaneous__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Past Due + Charges</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PayOff_Bank_Rebate_Amount__c</fullName>
        <description>Pay off bank rebate</description>
        <label>PayOff Bank Rebate Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PayOff_Dealership_Rebate_Amount__c</fullName>
        <description>Pay off dealer rebate</description>
        <label>PayOff Dealership Rebate Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Payment_Amount_ACH__c</fullName>
        <description>ACH payment amount</description>
        <label>Payment Amount ACH</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Payment_Amount_Balloon__c</fullName>
        <description>Payment Amount</description>
        <label>Payment Amount Balloon</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Payment_Amount_Last1__c</fullName>
        <label>Payment Amount Last1</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Payment_Amount_Last2__c</fullName>
        <label>Payment Amount Last2</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Payment_Amount_Last3__c</fullName>
        <label>Payment Amount Last3</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Payment_Amount_Next__c</fullName>
        <description>Next due payment amount</description>
        <label>Payment Amount Next</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Payment_Amount_Past_Due__c</fullName>
        <description>Past due amount</description>
        <label>Past Due Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Payment_Amount_Scheduled__c</fullName>
        <description>Payment Amount</description>
        <label>Scheduled Payment Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Payment_Date_First__c</fullName>
        <description>First payment date</description>
        <label>Payment Date First</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Payment_Date_Last1__c</fullName>
        <label>Payment Date Last1</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Payment_Date_Last2__c</fullName>
        <label>Payment Date Last2</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Payment_Date_Last3__c</fullName>
        <label>Payment Date Last3</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Payment_Date_Last_Extension__c</fullName>
        <description>Last Extension Date</description>
        <label>Last Extension Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Payment_Date_Next__c</fullName>
        <description>next due payment date</description>
        <label>Next Payment Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Payment_Date_Past_Due__c</fullName>
        <description>Past due date</description>
        <label>Past Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Payment_Depreciation_Amount__c</fullName>
        <description>Lease payment depreciation amount</description>
        <label>Payment Depreciation Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Payment_Extension_Fee_Assessed__c</fullName>
        <description>Payment Extension Fees</description>
        <label>Payment Extension Fee Assessed</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Payment_Extension_Fee_Deferred__c</fullName>
        <description>Payment Extension Fees</description>
        <label>Payment Extension Fee Deferred</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Payment_Extension_Fee_Paid__c</fullName>
        <description>Payment Extension Fees</description>
        <label>Payment Extension Fee Paid</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Payment_Extension_Fee_Waived__c</fullName>
        <description>Payment Extension Fees</description>
        <label>Payment Extension Fee Waived</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Payment_Extension_Fee__c</fullName>
        <description>Payment Extension Fees</description>
        <label>Payment Extension Fee</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Payment_Income_Amount__c</fullName>
        <description>Lease payment income amount</description>
        <label>Payment Income Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Payment_Insurance_Amount__c</fullName>
        <description>Lease payment insurance amount</description>
        <label>Payment Insurance Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Payment_Last_Extension_Date__c</fullName>
        <description>Extension date</description>
        <label>Payment Last Extension Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Payment_Lease_Maintenance_Amount__c</fullName>
        <description>Lease payment maintenance amount</description>
        <label>Payment Lease Maintenance Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Payment_Partial_Amount__c</fullName>
        <description>Payment amount</description>
        <label>Payment Partial Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Payment_Past_Due_Counter_15__c</fullName>
        <label>Payment Past Due Counter 15</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Payment_Past_Due_Counter_30__c</fullName>
        <label>Payment Past Due Counter 30</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Payment_Past_Due_Counter_60__c</fullName>
        <label>Payment Past Due Counter 60</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Payment_Term_Remaining__c</fullName>
        <description>Remaining payment term</description>
        <label>Payment Term Remaining</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Payoff_Amount_Gross__c</fullName>
        <description>payoff amount (Lease - gross)</description>
        <label>Payoff Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Payoff_Amount_Net__c</fullName>
        <description>Payoff Amount (Retail - net)</description>
        <label>Payoff Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Payoff_Amount_Retail_or_Lease__c</fullName>
        <formula>IF ( RecordType.DeveloperName = &quot;Lease&quot;, Payoff_Amount_Gross__c,
IF ( RecordType.DeveloperName = &quot;Retail&quot;,  Payoff_Amount_Net__c, null ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Payoff Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Payoff_Amount__c</fullName>
        <description>payoff amount</description>
        <label>Payoff Amount (no data)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Payoff_Good_Thru_Date__c</fullName>
        <description>Good through date</description>
        <label>Payoff Good Thru Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Primary_Garage_State__c</fullName>
        <description>Populated by workflow rule. 

Indicates the mailing garage state for the primary borrower.</description>
        <label>Primary Garage State</label>
        <length>3</length>
        <type>Text</type>
    </fields>
</CustomObject>